# instrument-amdgpu-kernels-iree

./: .gitignore  .gitmodules  AMDGCNMemTrace.cpp  CMakeLists.txt  README.md  iree_compiler_plugin.cmake
sample/: Makefile  test.mlir
